# variance-deltas

./: .gitignore  LICENSE  README.md  build.ps1  build.sh  install.ps1  install.sh  main.ts  package.json  sc_fg.fg  test_data.json  test_spec  test_spec_simple
.github/workflows/: build-all.yml  build-linux-arm64.yml  build-linux.yml  build-macos.yml  build-windows.yml
backend/include/: factor_graph.hpp  lik_complexity.hpp  markov.hpp  read_lik.hpp  read_stan.hpp  run_model_parser.hpp
backend/src/: markov.cpp  mrf.cpp  parse_options.cpp  read_stan.cpp  regression.cpp  regression_rf.cpp  run_model_parser.cpp  save_state.cpp  vcpkg.json  ws_client.cpp
client/: package-lock.json
client/src/lib/: tree_methods.ts  websocket.svelte.ts
client/src/lib/components/: ConnectionOverlay.svelte  GroupsDialog.svelte  InlineEditor.svelte  MultiSelectionDialog.svelte  SaveButton.svelte  SelectParam.svelte  SelectionDialog.svelte  SettingsDialog.svelte
client/src/lib/state/: draw_tree.ts  store_state.ts  tree.ts
fg_parser/: dune-project  fg_parser.opam  parser-learning.opam
fg_parser/lib/: ast.ml  dune  interpreter.ml  lib_types.ml  parse_file.ml  read_data.ml  semantic.ml
fg_parser/test_models/: nn_spec  pm_data.json  pm_spec  sc_spec
graph_backend/: .gitignore  graph_test.gv
graph_backend/include/: factor_graph.hpp  lik_complexity.hpp  min_sep_vis.hpp  parameter_graph.hpp  parse_options.hpp  read_mrf.hpp  read_stan.hpp  read_tree_data.hpp  regression.hpp  regression_rf.hpp  save_state.hpp  serialize_tree.hpp  ws_client.hpp
graph_backend/src/: CMakeLists.txt  markov.cpp  mrf.cpp  parse_options.cpp  read_mrf.cpp  read_stan.cpp  regression_rf.cpp  run_model_parser.cpp  save_state.cpp  serialize_tree.cpp  vcpkg.json
graph_backend/src/tests/: graph_test.cpp  reg_test.cpp
include/: markov.hpp  min_sep_vis.hpp  parameter_graph.hpp  read_lik.hpp  read_mrf.hpp  read_stan.hpp  read_tree_data.hpp  regression.hpp  serialize_tree.hpp  ws_client.hpp
lib/: ast.ml  dune  interpreter.ml  lib_types.ml  parse_file.ml  read_data.ml  semantic.ml  simppl_errors.messages  simppl_lexer.mll  simppl_parser.mly  static_env.ml  static_env.mli_old
model_parser/: dune-project  fg_parser.opam
model_parser/lib/: ast.ml  interpreter.ml  lib_types.ml  ndarray.ml  parse_file.ml  read_data.ml  semantic.ml  simppl_errors.messages  simppl_lexer.mll  simppl_parser.mly  static_env.ml
model_parser/test/: dune
server/: .gitignore  main.ts
src/: CMakeLists.txt  graph_test.cpp  graph_test2.cpp  lik_complexity.cpp  markov.cpp  mrf.cpp  read_lik.cpp  read_mrf.cpp  read_stan.cpp  read_tree_data.cpp  regression.cpp  serialize_tree.cpp  ws_client.cpp
src/lib/: compute_width.ts  draw_tree.ts  export_svg.ts  groups.ts  selection.svelte.ts  short_names.ts  test_tree.ts  tree.old.ts  tree.ts  tree_methods.ts  user_state.svelte.ts  websocket.ts
src/lib/components/: ExportDialog.svelte  ExtrusionDialog.svelte  GroupItem.svelte  GroupsDialog.svelte  MultiSelectionDialog.svelte  NameEditor.svelte  NamesDialog.svelte  SelectParam.svelte  SelectionDialog.svelte  SettingsDialog.svelte
src/lib/state/: compute_width.ts  draw_data.ts  draw_tree.ts  names.ts  selection.svelte.ts  store_state.ts  tree.ts  types.ts  user_state.svelte.ts
src/routes/: +page.svelte
src/tests/: ws_test.cpp
static/: katex.css
test/: dune
test_models/: nn_data.json  nn_spec  sc_data.json  sc_spec
tree_frontend/: package.json
tree_frontend/src/lib/: export_svg.ts  tree_methods.ts  websocket.svelte.ts  websocket.ts
tree_frontend/src/lib/components/: ExportDialog.svelte  GroupItem.svelte  GroupsDialog.svelte  InlineEditor.svelte  MultiSelectionDialog.svelte  NamesDialog.svelte  SaveButton.svelte  SelectParam.svelte  SelectionDialog.svelte  SettingsDialog.svelte  TreeEditor.svelte
tree_frontend/src/lib/state/: draw_tree.ts  groups.ts  short_names.ts  store_state.ts  tree.ts  types.ts  user_state.svelte.ts
tree_frontend/src/routes/: +page.svelte
tree_frontend/static/: katex.css
ws_server/: main.ts
