(lang dune 3.20)

(name fg_parser)

(generate_opam_files true)

(using menhir 3.0)

(source
 (github username/reponame))

(authors "Collin Cademartori <collin-cademartori@gmail.com>")

(maintainers "Collin Cademartori <collin-cademartori@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name fg_parser)
 (synopsis "A parser which converts model specifications and data into a list of factors.")
 (description "A parser of factor graph files. These files compactly describe the factorization of a probability model in a data-dependent manner using a stan-like syntax. The factor graph parser combines these specifications with user-provided data in JSON format in order to produce a list of posterior factors, as well as specification of roor and leaf nodes for constructing variance deltas.")
 (depends ocaml core yojson ppx_sexp_conv ppx_yojson_conv menhir menhirLib)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
