(menhir
 (modules simppl_parser)
 (flags --exn-carries-state))

(ocamllex simppl_lexer)

(rule
  ; (deps parserMessages.check)
  (action (with-stdout-to simppl_errors.ml
    (run menhir
      %{dep:simppl_parser.mly}
      --compile-errors %{dep:simppl_errors.messages}
    )
  ))
)

(library
 (name fg_parser)
 (public_name fg_parser)
 (preprocess
  (pps ppx_sexp_conv ppx_yojson_conv))
 (modules ast simppl_parser simppl_lexer semantic static_env interpreter read_data simppl_errors parse_file lib_types ndarray)
 (libraries sexplib menhirLib))
 