cmake_minimum_required(VERSION 3.10)
cmake_policy(SET CMP0167 OLD)
project(ModelGraphServer)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(Boost_USE_STATIC_LIBS True)
set(OPENSSL_USE_STATIC_LIBS True)
set(ZLIB_USE_STATIC_LIBS On)

find_package(Boost REQUIRED COMPONENTS filesystem process program_options serialization)
find_package(Eigen3 3.3 REQUIRED NO_MODULE)
find_package(ZLIB REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(nlohmann_json 3.12.0 REQUIRED)

set(GRAPH_SOURCES mrf.cpp markov.cpp ws_client.cpp read_mrf.cpp read_lik.cpp read_stan.cpp regression.cpp serialize_tree.cpp lik_complexity.cpp read_tree_data.cpp regression_rf.cpp parse_options.cpp run_model_parser.cpp save_state.cpp)
add_executable(graph_test ${GRAPH_SOURCES})
target_link_libraries(graph_test Boost::headers Boost::filesystem Boost::program_options Boost::process Boost::serialization)
target_link_libraries(graph_test OpenSSL::SSL OpenSSL::Crypto)
target_link_libraries (graph_test Eigen3::Eigen)
target_link_libraries(graph_test nlohmann_json::nlohmann_json)
target_include_directories(graph_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../include)